<resources>
    <string name="desciption"><pre> <b>Punjab </b> or <b>panjab</b> is a state in  northern India. Punjab region
     is borderedby the Indian states of Jammu and Kashmir to the north,Himachal Pradesh to</pre> the east,Haryana to the south and
     southeast, Rajasthan to th southwest, and the  Pakistan province of Punjab to the west. It is the twentieth largest
     Indian state by area. With 27,704,236 inhabitants at the 2011 census, Punjab is the sixteenth largest state by population,
     comprising 22 districts.The Language Punjabi,is the most widely spoken and
     official language of the state. The main ethnic group are the Punjabis,  with Punjabi Sikhs (57.7 percent) forming  the
     demographic majority followed by Hindus (38.5 percent). The
     state capital is located in Chandigarh, a Union Territory and
     also the capital of the Haryana(neighboring state).\n\n </string>
    <string name="politics">Punjab is governed through a parliamentary system of representative democracy. Each of the
        states of India possesses a parliamentary system of government, with aceremonial state Governor, appointed by
        the President of India on the advice of thecentral government. The head of government is an indirectly elected
        Chief Minister whois vested with most of the executive powers. The term length of the government isfive years.
        The state legislature, the Vidhan Sabha, is the unicameral PunjabLegislative Assembly, with 117 members elected
        from single-seat constituencies. \n\n
    </string>
    <string name="description">Primary and Secondary education is mainly affiliated to Punjab School Education Board.
 Punjab is served by several institutions of higher education, including 23 universities that
 provide undergraduate and postgraduate courses in all the major arts, humanities, science, engineering,
 law, medicine, veterinary science, and business. Punjab Agricultural University is a leading
 institution globally for the study of agriculture and played a significant role in Punjab Green
 Revolution in the 1960s–70s. Alumni of the Panjab University, Chandigarh include Manmohan Singh, the
 former Prime Minister of India, and Dr. Har Gobind Khorana, a biochemistry nobel laureate.
One of the oldest institutions of medical education is the Christian Medical College,
 Ludhiana, which has existed since 1894.[50] There is an existing gap in education between
 men and women, particularly in rural areas of Punjab. Of a total of 1 million 300 thousand
 students enrolled in grades five to eight, only 44% are women.
Punjab has 23 universities, of which 10 are private, 9 are state,
1 is central and 3 are deemed universities. Punjab has 1.04 lakh (104,000) engineering seats.</string>
    <string name="about1"> The word Punjab is made of two words Punj (Five) + Aab (Water) i.e. land of five rivers.
        It is named so because of the five rivers flowing through this land and these five rivers of Punjab are Sutlej, Beas, Ravi,
        Chenab and Jhelum. Historically, Punjab was the name of the region containing today states of Punjab (Pakistan), Punjab (India),Haryana,Himachal Pradesh
        and Delhi. The rivers flowing through this region are an important geographical feature of this land, thus made this region popular with the name
        "land of five rivers" or "punjab". As of today, only two rivers Sutlej and Beas flow through Punjab state in India. The third river Ravi flows partially in Punjab,
        mainly along the international boundry of India and Pakistan and then enters Pakistan. The other two rivers Chenab and Jhelum flow in the Punjab state in Pakistan.
        All these five rivers are tributaries of Indus river.All these five rivers finally merge into Indus river directly or indirectly and the Indus then terminates
        into Arabian Sea near Karachi city in Pakistan. These rivers, including the Indus river are considered part of Indus Valley River System.\n\n
       </string>
    <string name="punjab1">The Punjab region was home to the Indus Valley Civilization until 1900 BCE. In 1800 BCE the Aryans invaded northern
        India. The Punjab was conquered by Alexander the Great in 330 BCE and was captured by Chandragupta Maurya. The Punjab was home to the
        Gupta Empire, the enpire of the Alchon Huns, the empire of Harsha, and the Mongol Empire. Circa 1000, the Punjab was invaded by
        Muslims and was part of the Delhi Sultanate and Mughal Empire. Sikhism originated in Punjab and resulted in the formation of the Sikh
        Confederacy after the fall of the Mughal Empire. The confederacy was united into the Sikh Empire by Ranjit Singh. The entire Punjab
        region was annexed by the British East India Company from the Sikh Empire in 1849. In 1947, the Punjab Province of British India was
        divided along religious lines into West Punjab and East Punjab. The western part was assimilated into new country of Pakistan while
        the east stayed in India. The Indian Punjab was divided on the basis of language in 1966. It was divided into 3 parts. Haryanvi
        speaking areas (dialect of Hindi) were carved out as Haryana, Hilly regions and Pahari speaking areas formed Himachal Pradesh
         alongside the current state of Punjab. The diverse cultures of the various rulers of Punjab have influenced Punjabi culture.\n\n

    </string>
    <string name="punjab2">The government of Punjab has three branches - executive, judiciary and legislative. Punjab follows the
        parliamentary system of government with the Chief Minister as the head of the state. \n \n</string>
    <string name="punjab4">State is primarily agriculture-based due to the presence of abundant water sources and fertile soils
        Other major industries include the manufacturing of scientific instruments, agricultural goods, electrical goods, financial
        services, machine tools, textiles, sewing machines, sports goods, starch, tourism, fertilisers, bicycles, garments, and the processing
        of pine oil and sugar. Minerals and energy resources also contribute to the Punjab economy although to a much lesser extent. Punjab
        has the largest number of steel rolling mill plants in India, which are located in "Steel Town"—Mandi Gobindgarh in the Fatehgarh
        Sahib district.
    </string>
    <string name="potics1"> The current Government was elected in the 2017 Assembly elections as Congress won
        77 out of 117 Assembly seats and Amarinder Singh is the current Chief Minister.\n\n
    </string>
    <string name="polotics3"> <b>List of chief Minister of punjab. </b>
        \n
        1.Gopi Chand Bhargava \n
        2.Bhim Sen Sachar \n
        3.Partap Singh Kairon \n
        4.Ram Kishan \n
        5.Giani Gurmukh Singh Musafir \n
        6.Gurnam Singh \n
        7.Lachhman Singh Gill \n
        8.Parkash Singh Badal \n
        9.Zail Singh \n
        10.Darbara Singh \n
        11.Surjit Singh Barnala \n
        12.Beant Singh \n
        13.Harcharan Singh Brar \n
        14.Rajinder Kaur Bhattal \n
        15.Amarinder Singh \n\n</string>
    <string name="polotics5">The main players in the politics of the state are the Indian National Congress and the Shiromani Akali Dal (with alliance Bharatiya Janata Party).
        The present government is headed by Amarinder Singh. President rule has been imposed in Punjab 8 times so far, since 1950, for different reasons. In terms of the
        absolute number of days, Punjab was under President’s rule for 3510 days, which is about 10 years.Much of this was in the 80s during the height of militancy in Punjab.
        Punjab was under President’s rule for 5 continuous years from 1987 to 1992.Each district under the administrative control of a District Collector. The districts are
        subdivided into 79 tehsils, which have fiscal and administrative powers over settlements within their borders, including maintenance of local land records comes under
        the administrative control of a Tehsildar. Each Tehsil consists of blocks which are total 143 in number. The blocks consist of revenue villages. There are total number
        of revenue villages in the state is 12,278. There are 22 Zila Parishads, 136 Municipal Committees and 22 Improvement Trusts looking after
        143 towns and 14 cities of Punjab. Majitha is newly created tehsil, which was formed in September 2016. Zirakpur is the latest sub-tehsil, in the district of Mohali.\n\n

































    </string>
    <string name="dance1">The term Bhaṅgra refers to the traditional dance from the Indian subcontinent originating in the Majha area of the Punjab region,
        free form traditional Bhangra originating in Punjab, India and modern Bhangra developed by the Punjabi diaspora.
        The origins of traditional Bhangra are speculative. According to Dhillon (1998), Bhangra is related to the Punjabi dance bagaa
        which is a martial dance of Punjab.However, the folk dance of Majha originated in Sialkot and took root in Gujranwalla,
        Sheikhupur, Gujrat (districts in Punjab, Pakistan) and Gurdaspur. The traditional form of
        Bhangra danced in the villages of Sialkot district is regarded as the standard.Although the main districts where traditional
        Bhangra is performed are in Punjab, Pakistan, the community form of traditional Bhangra has been maintained in Gurdaspur district,
        Punjab, India and has been maintained by people who have settled in Hoshiarpur, Punjab India after leaving what is now Punjab,
        Pakistan. Traditional Bhangra is performed in a circle and is performed using traditional dance steps.
        Traditional Bhangra is now also performed on occasions other than during the harvest season and is popular in Pakistan.\n\n




    </string>
    <string name="dance9">Traditional Bhangra has also been imported into the Jammu plains which merge with the plains of Punjab,together
        with other Punjabi folk dances such as Giddha and Luddi.Punjabi language influences
        can be observed when people dance such dances in Jammu as the area falls within the Punjab region and shares an affinity with Punjab.
        The 1950s saw the development of the free form traditional Bhangra in Punjab, India which was patronised by the Maharaja of Patiala
        who requested a staged performance of Bhangra in 1953. The first significant developers of this style were a dance troupe led by
        brothers from the Deepak family of Sunam (Manohar, Avtar and Gurbachan) and the dhol player Bhana Ram Sunami.[19] Free form
        traditional Bhangra developed during stage performances which incorporate traditional Bhangra moves and also include sequences
        from other Punjabi dances, namely, Luddi, Jhummar, Dhamaal, and Gham Luddi. The singing of Punjabi folk songs, bolian, are
        incorporated from Malwai Giddha.
        Bhangra competitions have been held in Punjab, India for many decades, with Mohindra College in Patiala being involved in the 1950s.\n\n
    </string>
    <string name="dance2">
        1.Sammi \n
        2.Giddha \n
        3.Jaago\n
        4.Kikli \n \n
    </string>
    <string name="dance7">1.Bhangra \n
                          2.Malwai Giddha \n
                        3.Jhumar \n
                        4.Mirza \n
                        5.Sial Koti \n
                        6.Jugni \n
                        7.Khichan \n
                        8.Dhamal \n
                        9.Dankara \n
                        10.Khatka (Sword Dance) \n \n</string>
    <string name="dance5">1.Bhangra \n
                           2. Karthi \n
                            3.Jindua \n
                            4.Dandass \n \n \n \n </string>
</resources>