<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.geetanshsharma.love_punjab.aboutpunjab">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="10sp"
                android:alpha=".60"
                android:id="@+id/image"
                android:layout_width="210dp"
                android:layout_gravity="center"
                android:layout_height="210dp"
                android:scaleType="fitXY"
                android:src="@drawable/abtresize"/>


            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="ABOUT PUNJAB"
                android:textSize="22dp"
                android:textStyle="bold"
            />


        <TextView
            android:textColor="#FFBB00"

            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:text="@string/desciption"/>

            <TextView
                android:textColor="#FFBB00"

                android:layout_marginRight="20dp"
                android:textSize="22dp"
                android:layout_marginLeft="20dp"
                android:text="@string/about1"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />



            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="22dp"
                android:text="@string/punjab1"
                android:textStyle="normal"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="22dp"
                android:textColor="#FFBB00"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punjab2"
                android:textStyle="normal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20sp"
                />
            <TextView
                android:textColor="#FFBB00"

                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textStyle="normal"
                android:text="@string/punjab4"/>


        </LinearLayout>
    </ScrollView>



</RelativeLayout>
