<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.geetanshsharma.love_punjab.politics">



<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="10sp"
            android:id="@+id/image"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:src="@drawable/polresize"
            android:transitionName="polshared"
            android:scaleType="fitXY"/>


    <TextView
        android:textColor="#FFBB00"
        android:layout_marginLeft="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22dp"
        android:text="ABOUT POLITICS"/>
    <TextView
        android:textColor="#FFBB00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="normal"
        android:text="@string/politics"/>



        <TextView
            android:textColor="#FFBB00"
            android:layout_width="wrap_content"
            android:textSize="22dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/polotics5"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#FFBB00"
            android:textSize="22dp"
            android:layout_width="wrap_content"
            android:text="@string/potics1"
            android:textStyle="normal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#FFBB00"
            android:textSize="22dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="normal"
            android:text="@string/polotics3"
            android:layout_height="wrap_content" />


</LinearLayout>
</ScrollView>
</RelativeLayout>
