<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.geetanshsharma.love_punjab.dance">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="10sp"
                android:layout_gravity="center"
                android:src="@drawable/cultureresize"
                android:transitionName="danceshared"
                android:layout_width="210dp"
                android:layout_height="210dp" />
            <TextView
                android:layout_gravity="center"
                android:textColor="#FFBB00"
                android:text="DANCE"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="normal"
                android:textSize="22dp"
                android:text="@string/dance1"/>

            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/dance9"
                android:textStyle="normal"
                android:textSize="22dp"/>

            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="Common Punjabi Folk Dances for Females : "/>
            <TextView
                android:textColor="#FFBB00"
                android:textSize="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/dance2"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="Common Punjabi Folk Dances for Males :"/>
            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:text="@string/dance7"
                android:textStyle="normal"
                android:textSize="22dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="Common Punjabi Folk Dances for Males and Females :"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"/>

            <TextView
                android:textColor="#FFBB00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dance5"
                android:textStyle="normal"
                android:textSize="22dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
